# Devoir5_Hopfield_Template

./: README.md  autocorrect.py  notes.yaml  pyproject.toml  requirements.txt
.github/workflows/: classroom.yml
latex/: enonce.tex
src/: hopfield.py  utils.py
tests/base_tests/: test_hopfield.py
tests/base_tests/data/: big_letters.json  image.npy  message.npy  small_letters.json
